--- a/index.html
+++ b/index.html
@@ -39,31 +39,10 @@
             <div class="cell available" data-index="7"></div>
             <div class="cell available" data-index="8"></div>
         </section>
-        <section class="info__section">
-            <div class="current__player-info">
-                <p>It's <span id="current-player">Player X</span>'s turn</p>
-            </div>
-            <div class="scores-info">
-                <ul class="scores-list">
-                    <li class="score-container playerX-container">
-                        <p class="player">Player X</p>
-                        <p class="score" id="playerX-score">0</p>
-                    </li>
-                    <li class="score-container ties-container">
-                        <p class="player">Ties</p>
-                        <p class="score" id="ties-score">0</p>
-                    </li>
-                    <li class="score-container playerO-container">
-                        <p class="player">Player O</p>
-                        <p class="score" id="playerO-score">0</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
     </main>
     <footer>
         <div class="attribution">
-            <p>Made by <a href="#">David</a></p>
+            <p>Made by <a href="https://github.com/Daviddp96">David</a></p>
         </div>
     </footer>
     <script src="./index.js"></script>
